--- a/app/views/static_pages/delete_user.html.erb
+++ b/app/views/static_pages/delete_user.html.erb
@@ -1,11 +1,11 @@
   <div class="container">
 
     <div class="content">
-      <div class="delete-title">
+      <div class="row delete-title">
         <h2 class="mt-3">退会ページ</h2>
       </div>
 
-      <div class="delete-description border p-2">
+      <div class="row delete-description border p-2 mb-3">
         <p>退会ページでは、退会手続きが行えます。</p>
         <p>下記のボックスにチェックを入れ「退会」ボタンを押下して下さい。</p>
         <p>押下後、数秒後に退会処理が完了します。</p>
@@ -16,29 +16,37 @@
         <p>これからもサービスの改善を行っていきますので、またのご利用をお待ちしています。</p>
       </div>
 
-      <div class="custom-control custom-checkbox mb-3">
+      <div class="row custom-control custom-checkbox mb-3">
         <input id="check-delete-user" type="checkbox" class="custom-control-input" val="del">
         <label class="custom-control-label" for="check-delete-user">退会</label>
       </div>
 
-      <div class="delete-link">
-        <%= link_to "マイページへ", mypage_path, class: "nav-link ml-auto btn btn-outline-light", id: "delete-user",style: "font-size: 0.5rem;color: #000000;", method: "get" %>
+      <div class="row delete-link mb-3">
+        <button type="button" class="btn btn-outline-secondary" id="delete-user" disabled>退会</button>
+      </div>
+      <div class="row mt-5">
+        <%= link_to "マイページへ", mypage_path, class: "nav-link mr-auto btn btn-outline-primary", id: "delete-user",style: "font-size: 0.5rem;color: #000000;", method: "get" %>
       </div>
     </div>
   </div>
 
   <%= content_for :delete_user do %>
   <script>
+    //let mypage = "<%= link_to 'マイページへ', mypage_path, class: 'nav-link ml-auto btn btn-outline-light', id: 'delete-user',style: 'font-size: 0.5rem;color: #000000;', method: 'get' %>"
+    //let delete_user = "<button type='button' id='delete-user'>退会します</button>"
+
     $("input#check-delete-user").change(function(){
       if($('input[type="checkbox"]').prop("checked")){
-        $(".nav-link#delete-user").attr("href", "/user");
-        $(".nav-link#delete-user").attr("data-method", "delete");
-        $(".nav-link#delete-user").text("退会します");
+        $('button#delete-user').prop('disabled', false);
       }else{
-        $(".nav-link#delete-user").attr("href", "/mypage");
-        $(".nav-link#delete-user").attr("data-method", "get");
-        $(".nav-link#delete-user").text("マイページへ");
+        $('button#delete-user').prop('disabled', true);
       }
+    });
+    $("button").on("click", function(){
+      $.ajax({
+        url: "/users",
+        type: "DELETE",
+      });
     });
   </script>
   <% end %>
