--- a/app/views/static_pages/mypage_pagination.html.erb
+++ b/app/views/static_pages/mypage_pagination.html.erb
@@ -10,7 +10,7 @@
       </i>
       <button type="button" class="btn-like" style="font-size: 1.5rem;">
         <i class="fa fa-thumbs-up"></i>
-        <span class="badge badge-pill badge-secondary" id="good-num"><%= @addition_video_data[num].get_likes_number(@addition_video_data[num].id) %></span>
+        <span class="badge badge-pill badge-secondary" id="good-num"><%= @additioal_video_data[num].get_likes_number(@additioal_video_data[num].id) %></span>
       </button>
     </div>
   </div>
