--- a/app/views/static_pages/mypage.html.erb
+++ b/app/views/static_pages/mypage.html.erb
@@ -34,7 +34,7 @@
         <% end %>
         <br>
         <br>
-        <%= link_to "退会ページへ",delete_user_path(current_user.id), class: "nav-link ml-auto btn btn-outline-light", style: "font-size: 0.5rem;color: #000000;" %>
+        <%= link_to "退会ページへ",delete_user_path(current_user.id), class: "nav-link ml-auto btn btn-outline-dark", style: "font-size: 0.5rem;" %>
         </div>
       </div>
       <div id="content-history" class="tab-pane" role="tabpanel">
