--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
   <div class="content">
+  <div class="container">
     <div class="col-12 mx-auto my-1 infinite-content">
     <% for num in 0..@initial_video_title.size-1 do %>
       <div class="card mb-3">
@@ -15,6 +16,7 @@
       </div>
     <% end %>
     </div>
+  </div>
   </div>
 
   <%= content_for :home_pagination do %>
