--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -27,6 +27,13 @@
       <div class="row my-4">
         <%= link_to "SHIROBUHIへようこそ",home_path, class: "mx-auto btn btn-outline-primary", style: "font-size: 0.5rem;" %>
       </div>
+      <hr>
+      <div class="row">
+        <ul>
+          <li><a href="https://twitter.com/Shirobuhi_sec">Twitter</a></li>
+          <li><a href="https://www.instagram.com/shirobuhi.customer">Instagram</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
