--- a/app/views/static_pages/video.html.erb
+++ b/app/views/static_pages/video.html.erb
@@ -1,4 +1,5 @@
   <div class="content">
+  <div class="container">
     <div class="col-12 mx-auto my-1">
       <video id="my-video" class="card-img-top" controls controlslist="nodownload" preload="auto" width="100%" height="264" poster="" data-setup="{}">
         <source src="<%= asset_path "https://object-storage.tyo1.conoha.io/v1/nc_ae525541a58a443c98717ded126b6ac3/shirobuhi_obs/uploads/#{@file}" %>" type="video/mp4">
@@ -14,6 +15,7 @@
         <p><%= @description %></p>
       </div>
     </div>
+  </div>
   </div>
 
 
