--- a/app/views/static_pages/search.html.erb
+++ b/app/views/static_pages/search.html.erb
@@ -25,7 +25,7 @@
               <div class="card-body">
                 <h4 class="card-title"><%= @initial_video_title[num] %></h4>
                 <i class="fa fa-thumbs-up" style="font-size: 1.5rem;">
-                  <span class="badge badge-pill badge-secondary" id="good-num">100</span>
+                  <span class="badge badge-pill badge-secondary" id="good-num"><%= @initial_video_data[num].get_likes_number(@initial_video_data[num].id) %></span>
                 </i>
               </div>
             </div>
