--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,23 +3,22 @@
       <div class="row mt-4 text-center copy-text" style="background-color: ;">
         <div class="col-10 offset-1">
           <h3>一人で守らなくて大丈夫。</h3>
-          <p>SHIROBUHIはセキュリティに特化した動画投稿サービスです。</p>
         </div>
       </div>
       <hr>
       <div class="row mt-4 text-center copy-text">
         <div class="col-10 offset-1">
           <div class="mb-5">
-            <h3><i class="fa fa-check mr-1"></i>技術のアウトプット場所になる。</h3>
-            <p>セキュリティは複雑な技術です。そのため、習得までの時間を短縮するためにはインプットした情報をアウトプットすることがとても大切になってきます。SHIROBUHIで動画を投稿し、自分の技術向上に役立てて下さい。</p>
+            <h4><i class="fa fa-check mr-1"></i>セキュリティ対策動画の魅力</h4>
+            <p>1分程度の動画でセキュリティ対策の方法を紹介しています。テンポの良い動画で、難しいと思われがちなセキュリティ対策を分かりやすくしています。</p>
           </div>
           <div class="mb-5">
-            <h3><i class="fa fa-check mr-1"></i>経験・知識を共有できる。</h3>
-            <p>アウトプットされた情報は閲覧する人にも役立ちます。自分に知識がない場合、SHIROBUHIが対策のスタート地点になります。</p>
+            <h4><i class="fa fa-check mr-1"></i>セキュリティ対策へのこだわり</h4>
+            <p>簡単で効果的な対策はたくさんあります。知識がない人でも興味を持ってもらえるように、実際に試したうえで紹介しています。</p>
           </div>
           <div>
-            <h3><i class="fa fa-check mr-1"></i>すぐに対策できる。</h3>
-            <p>実際にセキュリティ対策を行ってこそ意味があります。セキュリティ技術に詳しくない人でもSHIROBUHIで得た情報で対策が行えます。一人で勉強して対策するよりも時間が短縮されるはずです。</p>
+            <h4><i class="fa fa-check mr-1"></i>セキュリティ対策の相談ができる</h4>
+            <p>SHIROBUHIでセキュリティ対策に興味を持ち、もっと詳しく知りたいという人もいるかもしれません。そんなときは是非ご相談ください。</p>
           </div>
         </div>
       </div>
